--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,4 +1,4 @@
-name: Terraform GKE Deployment
+name: Terraform GKE Deployment (Dev Only)
 
 on:
   pull_request:
@@ -9,9 +9,9 @@ on:
     branches:
       - main
     paths:
-      - 'envs/prod/**'
+      - 'envs/dev/**'
       - 'modules/**'
-  workflow_dispatch: {} # enables manual triggers
+  workflow_dispatch: {} # enables manual runs
 
 env:
   GOOGLE_CLOUD_KEYFILE_JSON: ${{ secrets.GCP_CREDENTIALS }}
@@ -20,85 +20,81 @@ env:
 jobs:
   plan:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        env: [dev, prod]
     steps:
       - uses: actions/checkout@v4
+
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.9.0
+
       - uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: Terraform Init
-        run: terraform -chdir=envs/${{ matrix.env }} init
+        run: terraform -chdir=envs/dev init
 
       - name: Terraform Plan
-        run: terraform -chdir=envs/${{ matrix.env }} plan -var-file=terraform.tfvars -out=tfplan
+        run: terraform -chdir=envs/dev plan -var-file=terraform.tfvars -out=tfplan
 
   apply:
     runs-on: ubuntu-latest
     needs: plan
-    if: github.ref == 'refs/heads/main' && matrix.env == 'prod'
-    strategy:
-      matrix:
-        env: [dev] 
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
+
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.9.0
+
       - uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: Terraform Init
-        run: terraform -chdir=envs/${{ matrix.env }} init
+        run: terraform -chdir=envs/dev init
 
       - name: Terraform Apply
-        run: terraform -chdir=envs/${{ matrix.env }} apply -auto-approve tfplan
+        run: terraform -chdir=envs/dev apply -auto-approve tfplan
 
   destroy-plan:
     runs-on: ubuntu-latest
     needs: apply
-    strategy:
-      matrix:
-        env: [dev, prod]
     steps:
       - uses: actions/checkout@v4
+
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.9.0
+
       - uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: Terraform Init
-        run: terraform -chdir=envs/${{ matrix.env }} init
+        run: terraform -chdir=envs/dev init
 
       - name: Terraform Destroy Plan
-        run: terraform -chdir=envs/${{ matrix.env }} plan -destroy -var-file=terraform.tfvars -out=tfplan-destroy
+        run: terraform -chdir=envs/dev plan -destroy -var-file=terraform.tfvars -out=tfplan-destroy
 
   destroy-apply:
     runs-on: ubuntu-latest
     needs: destroy-plan
-    if: github.event_name == 'workflow_dispatch' # manual only
-    strategy:
-      matrix:
-        env: [dev, prod]
+    if: github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v4
+
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.9.0
+
       - uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: Terraform Init
-        run: terraform -chdir=envs/${{ matrix.env }} init
+        run: terraform -chdir=envs/dev init
 
       - name: Terraform Destroy Apply
-        run: terraform -chdir=envs/${{ matrix.env }} destroy -auto-approve
+        run: terraform -chdir=envs/dev destroy -auto-approve
