--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -31,6 +31,11 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
+      - name: Setup gcloud
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GOOGLE_PROJECT_ID }}
+
       - name: Terraform Init
         run: terraform -chdir=envs/dev init
 
@@ -40,7 +45,8 @@ jobs:
   apply:
     runs-on: ubuntu-latest
     needs: plan
-    if: github.ref == 'refs/heads/main'
+    environment: dev-apply   # <-- creates the approval gate
+
     steps:
       - uses: actions/checkout@v4
 
@@ -52,11 +58,16 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
+      - name: Setup gcloud
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GOOGLE_PROJECT_ID }}
+
       - name: Terraform Init
         run: terraform -chdir=envs/dev init
 
       - name: Terraform Apply
-        run: terraform -chdir=envs/dev apply -auto-approve 
+        run: terraform -chdir=envs/dev apply -auto-approve tfplan
 
   destroy-plan:
     runs-on: ubuntu-latest
@@ -72,6 +83,12 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
+      - name: Setup gcloud
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GOOGLE_PROJECT_ID }}
+
+
       - name: Terraform Init
         run: terraform -chdir=envs/dev init
 
@@ -81,7 +98,8 @@ jobs:
   destroy-apply:
     runs-on: ubuntu-latest
     needs: destroy-plan
-    if: github.event_name == 'workflow_dispatch'
+    environment: dev-apply-destroy   # <-- second approval gate
+
     steps:
       - uses: actions/checkout@v4
 
@@ -92,6 +110,11 @@ jobs:
       - uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
+      - name: Setup gcloud
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GOOGLE_PROJECT_ID }}
 
       - name: Terraform Init
         run: terraform -chdir=envs/dev init
